[package]
name = "rust-robot-arm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyw43 = { version = "0.1.0",  features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0",features = ["defmt", "overclock"] }

cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"]}
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"]}
portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2"
