[package]
name = "rust-robot-arm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
embassy-rp = { version = "0.1.0", features = ["critical-section-impl", "time-driver"]}
embassy-time = "0.3.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"]}
